# minimdnsd

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  minimdnsd.1.in  proj
.github/workflows/: build.yml  release.yml
src/: minimdnsd.c
